docker/deploy/k8s/components/sso/patch-control-plane-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ct-control-plane
  namespace: ct-system
spec:
  template:
    spec:
      containers:
        - name: control-plane
          volumeMounts:
            - name: auth-tls
              mountPath: /certs/auth
              readOnly: true
      volumes:
        - name: auth-tls
          secret:
            secretName: ct-edge-auth-tls
