docker/deploy/k8s/components/sso/patch-edge-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ct-edge
  namespace: ct-system
spec:
  template:
    spec:
      containers:
        - name: edge
          volumeMounts:
            - name: auth-tls
              mountPath: /certs/auth
              readOnly: true
      volumes:
        - name: auth-tls
          secret:
            secretName: ct-edge-auth-tls
